--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
-    "google-generativeai>=0.1.0",
+    "google-generativeai>=0.1.0rc1",
     "python-dotenv>=1.0.0",
     "pyyaml>=6.0",
     "click>=8.1.3",
