Fix linting and type checking issues
- Added proper type annotations to functions and variables
- Fixed Path vs str type issues in utils.py
- Added type ignores for Logger.trace method calls
- Removed unused imports
- Created .flake8 configuration to handle line length and line break issues
- Fixed test_find_ci_workflows to handle macOS path differences
- Re-enabled linting, type checking, and tests in CI workflow

Fixes #8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,23 +27,20 @@ jobs:
         python -m pip install hatch
         python -m pip install -e .[dev]
 
-    # Temporarily disable flake8 checks while in development
-    # - name: Lint with flake8
-    #   run: |
-    #     flake8 src tests
+    - name: Lint with flake8
+      run: |
+        flake8 src tests
 
-    # Temporarily disable mypy checks while in development
-    # - name: Check types with mypy
-    #   run: |
-    #     mypy src
+    - name: Check types with mypy
+      run: |
+        mypy src
 
-    # Temporarily disable tests while in development
-    # - name: Test with pytest
-    #   run: |
-    #     pytest
-    #   env:
-    #     AI_HOOKS_API_KEY: ${{ secrets.AI_HOOKS_API_KEY }}
-    #     GOOGLE_GEMINI_API_KEY: ${{ secrets.AI_HOOKS_API_KEY }}
+    - name: Test with pytest
+      run: |
+        pytest
+      env:
+        AI_HOOKS_API_KEY: ${{ secrets.AI_HOOKS_API_KEY }}
+        GOOGLE_GEMINI_API_KEY: ${{ secrets.AI_HOOKS_API_KEY }}
 
   build:
     runs-on: ubuntu-latest
