--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,26 +15,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install hatch
         python -m pip install .[dev]
-        
+
     - name: Lint with flake8
       run: |
         flake8 src tests
-        
+
     - name: Check types with mypy
       run: |
         mypy src
-        
+
     - name: Test with pytest
       run: |
         pytest
@@ -45,26 +45,31 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
-    
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
+
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install build hatch
-        
+
     - name: Build package
       run: |
         python -m build
-        
+
     - name: Store build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: dist
         path: dist/
+
+    - name: Mark build as successful
+      run: |
+        echo "Build completed successfully. Artifacts are available for download."
+        echo "No deployment step configured yet."
